@@ -4,6 +4,7 @@ HIGH PRIORITY
 
 MEDIUM PRIORITY
 - Game: rewrite GameScoreBoardNode to use Property<T>
+- Game: rewrite GameTimer to use Property<T>
 - Game: generalize GameRewardNode and migrate to games project
 
 LOW PRIORITY
