@@ -11,7 +11,6 @@ import edu.colorado.phet.balancingchemicalequations.model.GameEquationsFactory;
 import edu.colorado.phet.common.games.GameSettings;
 import edu.colorado.phet.common.phetcommon.model.Property;
 import edu.colorado.phet.common.phetcommon.util.IntegerRange;
-import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
 
 /**
  * Model for the "Game" module.
@@ -34,14 +33,15 @@ public class GameModel {
     private static final int POINTS_FIRST_ATTEMPT = 2;  // points to award for correct guess on 1st attempt
     private static final int POINTS_SECOND_ATTEMPT = 1; // points to award for correct guess on 2nd attempt
 
-    private final Property<Integer> pointsProperty; // how many points the user has earned for the current game
-    private final Property<GameState> gameStateProperty;
-    private final Property<Equation> currentEquationProperty;
+    // properties directly accessible by clients
+    public final Property<Integer> points; // how many points the user has earned for the current game
+    public final Property<GameState> state;
+    public final Property<Equation> currentEquation;
+    public final GameSettings settings;
+    public final GameTimer timer;
 
     private final GameEquationsFactory equationsFactory; // generates problem sets
-    private final GameSettings gameSettings;
     private final HashMap<Integer,Long> bestTimes; // best times, maps level to time in ms
-    private final GameTimer timer;
 
     private Equation[] equations; // the current set of equations to be balanced
     private int equationIndex; // index of the equation that the user is working on
@@ -50,77 +50,33 @@ public class GameModel {
     private boolean isGameCompleted; // was the game played to completion?
 
     public GameModel( final BCEGlobalProperties globalProperties ) {
-        gameStateProperty = new Property<GameState>( GameState.START_GAME );
-        pointsProperty = new Property<Integer>( 0 );
+        state = new Property<GameState>( GameState.START_GAME );
+        points = new Property<Integer>( 0 );
         equationsFactory = new GameEquationsFactory( globalProperties.playAllEquations );
-        gameSettings = new GameSettings( LEVELS_RANGE, true /* sound */, true /* timer */ );
+        settings = new GameSettings( LEVELS_RANGE, true /* sound */, true /* timer */ );
         bestTimes = new HashMap<Integer,Long>();
-        for ( int i = gameSettings.level.getMin(); i <= gameSettings.level.getMax(); i++ ) {
+        for ( int i = settings.level.getMin(); i <= settings.level.getMax(); i++ ) {
             bestTimes.put( i, 0L );
         }
         timer = new GameTimer( new BCEClock() );
-        equations = equationsFactory.createProblemSet( EQUATIONS_PER_GAME, gameSettings.level.getValue() ); // needs to be non-null after initialization
+        equations = equationsFactory.createProblemSet( EQUATIONS_PER_GAME, settings.level.getValue() ); // needs to be non-null after initialization
         equationIndex = 0;
-        currentEquationProperty = new Property<Equation>( equations[equationIndex] );
-    }
-
-    public long getTime() {
-        return timer.getTime();
-    }
-
-    public void addTimeObserver( SimpleObserver o ) {
-        timer.addTimeObserver( o );
-    }
-
-    public void removeTimeObserver( SimpleObserver o ) {
-        timer.removeTimeObserver( o );
-    }
-
-    private void setGameState( GameState value ) {
-        gameStateProperty.setValue( value );
-    }
-
-    public GameState getGameState() {
-        return gameStateProperty.getValue();
-    }
-
-    public void addGameStateObserver( SimpleObserver o ) {
-        gameStateProperty.addObserver( o );
-    }
-
-    private void setPoints( int points ) {
-        pointsProperty.setValue( points );
-    }
-
-    public int getPoints() {
-        return pointsProperty.getValue();
-    }
-
-    public void addPointsObserver( SimpleObserver o ) {
-        pointsProperty.addObserver( o );
-    }
-
-    public void removePointsObserver( SimpleObserver o ) {
-        pointsProperty.removeObserver( o );
-    }
-
-    public GameSettings getGameSettings() {
-        return gameSettings;
+        currentEquation = new Property<Equation>( equations[equationIndex] );
     }
 
     /**
      * Called when the user presses the "Start Game" button.
      */
     public void startGame() {
-        equations = equationsFactory.createProblemSet( EQUATIONS_PER_GAME, gameSettings.level.getValue() );
+        equations = equationsFactory.createProblemSet( EQUATIONS_PER_GAME, settings.level.getValue() );
         equationIndex = 0;
         attempts = 0;
         isNewBestTime = false;
         isGameCompleted = false;
         timer.start();
-        setPoints( 0 );
+        points.setValue( 0 );
         setCurrentEquation( equations[equationIndex] );
-        setGameState( GameState.CHECK );
+        state.setValue( GameState.CHECK );
     }
 
     /**
@@ -132,10 +88,10 @@ public class GameModel {
 
             // award points
             if ( attempts == 1 ) {
-                pointsProperty.setValue( getPoints() + POINTS_FIRST_ATTEMPT );
+                points.setValue( points.getValue() + POINTS_FIRST_ATTEMPT );
             }
             else if ( attempts == 2 ) {
-                pointsProperty.setValue( getPoints() + POINTS_SECOND_ATTEMPT );
+                points.setValue( points.getValue() + POINTS_SECOND_ATTEMPT );
             }
 
             // end the game
@@ -143,20 +99,20 @@ public class GameModel {
                 timer.stop();
                 isGameCompleted = true;
                 // check for new best time
-                long previousBestTime = getBestTime( gameSettings.level.getValue() );
-                if ( isPerfectScore() && ( previousBestTime == 0 || getTime() < previousBestTime ) ) {
+                long previousBestTime = getBestTime( settings.level.getValue() );
+                if ( isPerfectScore() && ( previousBestTime == 0 || timer.time.getValue() < previousBestTime ) ) {
                     isNewBestTime = true;
-                    setBestTime( gameSettings.level.getValue(), getTime() );
+                    setBestTime( settings.level.getValue(), timer.time.getValue() );
                 }
             }
 
-            setGameState( GameState.NEXT );
+            state.setValue( GameState.NEXT );
         }
         else if ( attempts < 2 ) {
-            setGameState( GameState.TRY_AGAIN );
+            state.setValue( GameState.TRY_AGAIN );
         }
         else {
-            setGameState( GameState.SHOW_ANSWER );
+            state.setValue( GameState.SHOW_ANSWER );
         }
     }
 
@@ -164,14 +120,14 @@ public class GameModel {
      * Called when the user presses the "Try Again" button.
      */
     public void tryAgain() {
-        setGameState( GameState.CHECK );
+        state.setValue( GameState.CHECK );
     }
 
     /**
      * Called when the user presses the "Show Answer" button.
      */
     public void showAnswer() {
-        setGameState( GameState.NEXT );
+        state.setValue( GameState.NEXT );
     }
 
     /**
@@ -182,10 +138,10 @@ public class GameModel {
             attempts = 0;
             equationIndex++;
             setCurrentEquation( equations[equationIndex] );
-            setGameState( GameState.CHECK );
+            state.setValue( GameState.CHECK );
         }
         else {
-            setGameState( GameState.NEW_GAME );
+            state.setValue( GameState.NEW_GAME );
         }
     }
 
@@ -193,19 +149,19 @@ public class GameModel {
      * Called when the user presses the "New Game" button.
      */
     public void newGame() {
-        setGameState( GameState.START_GAME );
+        state.setValue( GameState.START_GAME );
     }
 
     private void setCurrentEquation( Equation equation ) {
-        currentEquationProperty.setValue( equation );
+        currentEquation.setValue( equation );
     }
 
     public Equation getCurrentEquation() {
-        return currentEquationProperty.getValue();
+        return currentEquation.getValue();
     }
 
     public Property<Equation> getCurrentEquationProperty() {
-        return currentEquationProperty;
+        return currentEquation;
     }
 
     public boolean isNewBestTime() {
@@ -251,6 +207,6 @@ public class GameModel {
     }
 
     public boolean isPerfectScore() {
-        return getPoints() == getMaxScore();
+        return points.getValue() == getMaxScore();
     }
 }
